--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "extra": {
     "drush": {
       "services": {
-        "drush.services.yml": "^9 || ^10 || ^11"
+        "drush.services.yml": "^9 || ^10 || ^11 || ^12"
       }
     },
     "enable-patching": true
